cleaned up code and fixed spacing

--- a/project-manager/src/stylesheets/Show.css
+++ b/project-manager/src/stylesheets/Show.css
@@ -21,7 +21,7 @@
     margin: 4rem 4rem 0 4rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
     .show-sidebar {
         display: none;
     }
